syntax = "proto3";

package susubot.basic.fileweb;

option go_package = "protos/fileweb";

service FileWeb {
    rpc Upload (UploadRequest) returns (UploadResponse);
}

message UploadRequest {
    bytes Buf = 1;
    optional uint32 ValidTime = 2; //过期时间(ms)
    bool AutoRefresh = 3; //资源被请求后自动重置过期时间
}

message UploadResponse {
    string Hash = 1;
    string URLPath = 2;
}